# automake-cpp-template

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap.sh  build-debug.sh  configure.ac  debug.env
editorconfig/: local.vimrc  vim-completion.am
src/: Makefile.am
src/app/: Makefile.am  main.cpp
src/tests/: Makefile.am  runtime.tests.cpp  test-includes.hpp
